--- a/angular-threeJS-demo-app/package.json
+++ b/angular-threeJS-demo-app/package.json
@@ -1,25 +1,35 @@
 {
   "name": "angular-three-js-demo-app",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.15.3",
+    "npm": "6.14.9"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.4",
+    "@angular/cli": "~12.0.4",
     "@angular/common": "~12.0.4",
     "@angular/compiler": "~12.0.4",
+    "@angular/compiler-cli": "~12.0.4",
     "@angular/core": "~12.0.4",
     "@angular/forms": "~12.0.4",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "typescript": "~4.2.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
