--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@types/three": "^0.129.1",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "three": "^0.129.0",
     "tslib": "^2.1.0",
     "typescript": "~4.2.3",
     "zone.js": "~0.11.4"
